[UI] Fix the x-overflow of the text area.

--- a/include/core/main/asset/css/site-debug-log.css
+++ b/include/core/main/asset/css/site-debug-log.css
@@ -6,4 +6,5 @@
 }
 .amazon-auto-links-field-textarea textarea {
     height: 1200px;
+    white-space: pre;
 }
